# beman-tidy

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: beman-tidy.yml  publish.yml
beman_tidy/lib/checks/base/: base_check.py
beman_tidy/lib/checks/beman_standard/: directory.py  readme.py
beman_tidy/lib/utils/: string.py
docs/: dev-guide.md  release.md
tests/lib/checks/beman_standard/readme/: test_readme.py
tests/lib/checks/beman_standard/readme/data/valid/: README-v5.md
